<resources>
    <string name="app_name">WeatherApp</string>
    <string name="city_name">St. Paul, MN</string>
    <string name="current_temp">%d°</string>
    <string name="low_temp">Low: %d°</string>
    <string name="Feels_like">Feels like %d°</string>
    <string name="high_temp">High: %d°</string>
    <string name="humidity">Humidity: %d%%</string>
    <string name="pressure">Pressure: %dhPa</string>
    <string name="Weather_App">Weather App</string>
    <string name="forecast">Forecast</string>
    <string name="back">back</string>
    <string name="degreeTemp">%d°</string>
    <string name="label_sunrise">Sunrise: %s</string>
    <string name="label_sunset">Sunset: %s</string>
    <string name="label_high">High:</string>
    <string name="label_low">Low:</string>
    <string name="label_humidity">Humidity: %d</string>
    <string name="label_pressure">Pressure: %d</string>
    <string name="temp_label">Temp: %d</string>
    <string name="get_weather_for_my_location"> Get Weather for My Location</string>
</resources>