<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">


    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="90dp"
        android:src="@drawable/sun_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/forecast_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/lowTempText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="72"
        />

    <TextView
        android:id="@+id/lowTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_low"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/high_temp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/highTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_high"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/forecast_date"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/highTempText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="55"
        />

    <TextView
        android:id="@+id/forecast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="15dp"
        app:layout_constraintStart_toEndOf="@id/current_condition_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="Sep 22"
        />

    <TextView
        android:id="@+id/sunriseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sunrise"
        android:paddingEnd="3dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/sunrise"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sunsetText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sunset"
        android:paddingEnd="3dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/sunset"
        app:layout_constraintTop_toBottomOf="@id/sunriseText"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/sunrise"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="8:00 PM"/>

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="8:00 AM"/>

    <TextView
        android:id="@+id/forecast_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        app:layout_constraintStart_toEndOf="@id/humidText"
        app:layout_constraintTop_toBottomOf="@id/lowTempText"
        tools:text="66"
        />

    <TextView
        android:id="@+id/humidText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_humidity"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/forecast_date"
        app:layout_constraintTop_toBottomOf="@id/highTempText"/>

    <TextView
        android:id="@+id/pressureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pressure"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/forecast_date"
        app:layout_constraintTop_toBottomOf="@id/humidText"/>

    <TextView
        android:id="@+id/forecast_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        app:layout_constraintStart_toEndOf="@id/pressureText"
        app:layout_constraintTop_toBottomOf="@id/humidText"
        tools:text="22"
        />

</androidx.constraintlayout.widget.ConstraintLayout>